--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: 大黄蜂 # 你的博客名字，可以定义修订
+title: "Groot" # 你的博客名字，可以定义修订
 header-img: "img/green.jpg"
 tagline: "cn"  
 description: "记录学习过程。"  # 一句话描述你的博客
@@ -13,8 +13,8 @@ owner:
   bio: "Automotive Engineer" # 填写作者信息：博客描述
 
 # Data
-gavatar: img/favicon.png # 浏览器地址栏小图标，可自定义更改
-favicon: img/favicon.png # 浏览器地址栏小图标，可自定义更改
+gavatar: img/logo.png # 浏览器地址栏小图标，可自定义更改
+favicon: img/logo.png # 浏览器地址栏小图标，可自定义更改
 
 douban_username:  # 你的豆瓣id
 twitter_username: 
