--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: "Groot" # 你的博客名字，可以定义修订
+title: "I am Groot." # 你的博客名字，可以定义修订
 header-img: "img/green.jpg"
 tagline: "cn"  
 description: "记录学习过程。"  # 一句话描述你的博客
