--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: "I am Groot." # 你的博客名字，可以定义修订
-header-img: "img/green.jpg"
+header-img: "img/header-img.jpg"
 tagline: "cn"  
 description: "记录学习过程。"  # 一句话描述你的博客
 baseurl: ""
